--- a/styles-itj.css
+++ b/styles-itj.css
@@ -1,48 +1,11 @@
 <style>
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-	font-size: 18px; 
+font-family: Arial, sans-serif;
+font-size: 18px; 
+margin: 0;
+padding: 0;
 }
-
-h1 {
-  
-  padding-top: 35px;
-  color: #4fb9e3;
-  font-size: 30px;
-  text-align: center;
-}
-
-
-table {
-  text-align: center;
-  width: 97%;
-}
-
-
-
-.txt {
-  font-size: 18px;
-  text-align: left;
-  padding-left: 20px;
-}
-
-/*
-li {
-   list-style-image: url('box.png');
-}
-*/
-
-
-.markers li {
-	list-style-image: url('box3.png');
-	padding: 0px;
-	width: 290px;
-}
-
-
-
-
 
 p {
   font-size: 18px;
@@ -51,103 +14,67 @@ p {
   margin-right: 15px;
   padding-top: 10px;
 }
- section {
+
+h1 {
+  color: #4fb9e3;
+  font-size: 30px;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+section {
         display: flex; /*каждый flex-элемент будет занимать одинаковое количество места в flex-контейнере*/
       }
- article {
+article {
         padding: 10px;
         margin: 10px;
         background: #dedfe0;
+		border-radius: 20% 2%;  /*закругляшки*/
       }
-
-.content-box {
-  column-gap: 100px; /*расстояние между столбцами*/
-  column-count: 3; /*количество столбцов*/
-  column-rule: dotted 4px rgb(79 185 227); /*точки, толщина, цвет*/
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-top: 40px;
-  
-}
-.text {
-  color: #067a94;
-  font-size: 25px;
-  column-span: 1;
-  /*column-span: all;*/
-  background-color: rgb(79 185 227);
-  
-  color: white;
-  padding: 10px;
-  text-align: left;
+	  
+.container {
+box-sizing: border-box;
+border: solid #5B6DCD 10px;
+width: 100%; /* Относительная ширина контейнера */ 
+height: 100%; /* Относительная высота контейнера */ 
+margin: 0 auto; /* Центрирование */
+background-color: #f0f0f0;
+padding: 0px; /* узость - отступы контента контейнера слева и справа */
+padding-bottom: 10px;
 }
 
-.text-content {
-  font-size: 18px;
-  text-align: left;
-  padding-left: 25px;
+/* полоска с заголовком Н1 */
+.header {
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 10px; /* ширина полоски */
 }
 
-#wrapper {
-    margin: 544 auto 433px; 
-    width: 399px;
-      }
-#footer {
-    background-color: #4FB9E3; 
-    position: fixed; 
-	margin-top: 40px;
-    left: 50;
-    bottom: 0; 
-    height: 60px;
-    padding-left: 29px;
-    color: #2BA6C7; 
-    width: 97%; 
-   }
-
-.all-symbols {
-    float:left;
-    margin-top:19px;
-    padding-left:199px;
-  }
-
-
-.symbol {
-  margin-top: 1px;
-  margin-left:29px;
-  height:20px;
-}
-
-a img{
-opacity:1;
-}
-a:hover img{
-opacity:0.5;
+.footer {
+background-color: #333;
+color: #fff;
+text-align: center;
+padding: 20px; /* ширина полоски */
 }
 
 
-
-  
-  
-  
-  
-  
-
-}
-.link {
-  color: #000000;
+.content {
+padding: 10px;
 }
 
-.link:active {
-  color: #ea5454;
-}
-  .content {
-  padding-bottom: 700px;
-}
+@media screen and (max-width: 768px) { /* Медиа-запрос для адаптации на мобильных устройствах */
 
+.container {
+width: 100%; /* Уменьшение ширины контейнера */
+}
+}
 
 
 /*слайдер*/
-
-
 * {
    margin: 0;
    padding: 0;
@@ -156,52 +83,58 @@ opacity:0.5;
 .slider {
    width: 800px;
    height: 500px;
-   margin-top: 980px; /*отступ слайдера */
-   overflow: hidden;
+   /*margin-top: 880px; отступ слайдера */
+   overflow: hidden; /*поведение, когда содержимое не помещается в поле заполнения элемента (переполняется) в горизонтальном и/или вертикальном направлении.*/
    border: 10px solid #cccdce;
 }
 
 .middle {
-   position: absolute;
-   top: 80%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   
+   position: static; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
+   top: 5%;
+   left: 0%;
+   margin-top: 10px;
+   transform: translate(-0%, -0%); /* позволяет поворачивать, масштабировать, наклонять или переводить элемент. translate -  */
+   width: 50%; /* Относительная ширина контейнера */
+   height: 50%;
+   margin: 0 auto; /* Центрирование */
 }
 
 .navigation {
-   position: absolute;
-   bottom: 16px;
+   position: absolute; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
+   bottom: 16px; /* участвует в установке вертикального положения позиционируемого элемента. */
    left: 50%;
-   transform: translateX(-50%);
-   display: flex;
+   transform: translateX(-50%); /* перемещает элемент горизонтально в 2D-плоскости - влево + вправо 0 не перемещает. */
+   display: flex; /* Элемент ведет себя как элемент уровня блока и размещает свое содержимое в соответствии с моделью flexbox.*/
+   
 }
 
+
 .bar {
-   width: 30px;
+   width: 50px;
    height: 8px;
    margin: 6px;
-   cursor: pointer;
+   cursor: pointer; /*Курсор — это указатель, который указывает на ссылку. Как правило, изображение указывающей руки.*/
    background-color: #000;
-   opacity: .5;
-   border-radius: 10px;
-   transition: all 0.4s ease;
+   opacity: .5;  /*задает непрозрачность элемента */
+  border-radius: 5px;  /*округляет углы внешнего края границы элемента */
+  transition: all 0.4s ease;  /* задержка в ...., прежде чем произойдет...*/
 }
 
 .bar:hover {
-   opacity: 1;
-   transform:scale(1.1);
+   opacity: 1; /*задает непрозрачность элемента */
+   transform:scale(1.1); /* растягивает по горизонтали + по вертикали*/
+   
 }
 
-input[name="r"] {
-   position: absolute;
-   visibility: hidden;
+input[name="r"] { 
+   position: absolute; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
+   visibility: hidden; /*скрывает элемент без изменения макета документа*/
 }
 
 .slides {
-   width: 400%;
-   height: 100%;
-   display: flex;
+   width: 400%; /* Увеличение размера фото*/
+   height: 100%; /* Увеличение размера фото*/
+   display: flex; /* Элемент ведет себя как элемент уровня блока и размещает свое содержимое в соответствии с моделью flexbox.*/
 }
 
 .slide {
@@ -209,9 +142,9 @@ input[name="r"] {
    transition: all 0.6s ease;
 }
 
-.img {
-   width: 100%;
-   height: 100%;
+.img { 
+   width: 100%; /* сжатие размера каждого фото отностительно рамки*/
+   height: 100%; /* сжатие размера каждого фото отностительно рамки*/
 }
 
 #r1:checked ~ .s1 {
@@ -227,13 +160,48 @@ input[name="r"] {
 }
 
 #r4:checked ~ .s1 {
-   margin-left: -75%;
-   
+   margin-left: -75%; 
 
 }
+
+
+
+.content-box {
+  column-gap: 100px; /*расстояние между столбцами*/
+  column-count: 3; /*количество столбцов*/
+  column-rule: dotted 4px rgb(79 185 227); /*точки, толщина, цвет*/
+  padding-left: 10px;
+  padding-right: 15px;
+   font-size: 18px;
+  margin-top: 40px;
+  
+}
+
+
+.text {
+  color: #067a94;
+  font-size: 25px;
+  column-span: 1;
+  /*column-span: all;*/
+  background-color: rgb(79 185 227);
+  
+  color: white;
+  padding: 10px;
+  text-align: left;
+}
+.text-content {
+  font-size: 18px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.markers li::marker {
+	color: #4FB9E3;
+	font-size: 18px;
+}
+.txt {
+  font-size: 18px;
+  text-align: left;
+  padding-left: 20px;
+}
 </style>
-
-
-
-
-
