--- a/styles-itj.css
+++ b/styles-itj.css
@@ -84,57 +84,51 @@ width: 100%; /* Уменьшение ширины контейнера */
    width: 800px;
    height: 500px;
    /*margin-top: 880px; отступ слайдера */
-   overflow: hidden; /*поведение, когда содержимое не помещается в поле заполнения элемента (переполняется) в горизонтальном и/или вертикальном направлении.*/
+   overflow: hidden;
    border: 10px solid #cccdce;
 }
 
 .middle {
-   position: static; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
-   top: 5%;
-   left: 0%;
-   margin-top: 10px;
-   transform: translate(-0%, -0%); /* позволяет поворачивать, масштабировать, наклонять или переводить элемент. translate -  */
-   width: 50%; /* Относительная ширина контейнера */
-   height: 50%;
-   margin: 0 auto; /* Центрирование */
+   position: absolute;
+   top: 80%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   
 }
 
 .navigation {
-   position: absolute; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
-   bottom: 16px; /* участвует в установке вертикального положения позиционируемого элемента. */
+   position: absolute;
+   bottom: 16px;
    left: 50%;
-   transform: translateX(-50%); /* перемещает элемент горизонтально в 2D-плоскости - влево + вправо 0 не перемещает. */
-   display: flex; /* Элемент ведет себя как элемент уровня блока и размещает свое содержимое в соответствии с моделью flexbox.*/
-   
+   transform: translateX(-50%);
+   display: flex;
 }
 
-
 .bar {
-   width: 50px;
+   width: 30px;
    height: 8px;
    margin: 6px;
-   cursor: pointer; /*Курсор — это указатель, который указывает на ссылку. Как правило, изображение указывающей руки.*/
+   cursor: pointer;
    background-color: #000;
-   opacity: .5;  /*задает непрозрачность элемента */
-  border-radius: 5px;  /*округляет углы внешнего края границы элемента */
-  transition: all 0.4s ease;  /* задержка в ...., прежде чем произойдет...*/
+   opacity: .5;
+   border-radius: 10px;
+   transition: all 0.4s ease;
 }
 
 .bar:hover {
-   opacity: 1; /*задает непрозрачность элемента */
-   transform:scale(1.1); /* растягивает по горизонтали + по вертикали*/
-   
+   opacity: 1;
+   transform:scale(1.1);
 }
 
-input[name="r"] { 
-   position: absolute; /* Элемент удаляется из обычного потока документов, и для него не создается места в макете страницы.  */
-   visibility: hidden; /*скрывает элемент без изменения макета документа*/
+input[name="r"] {
+   position: absolute;
+   visibility: hidden;
 }
 
 .slides {
-   width: 400%; /* Увеличение размера фото*/
-   height: 100%; /* Увеличение размера фото*/
-   display: flex; /* Элемент ведет себя как элемент уровня блока и размещает свое содержимое в соответствии с моделью flexbox.*/
+   width: 400%;
+   height: 100%;
+   display: flex;
 }
 
 .slide {
@@ -142,9 +136,9 @@ input[name="r"] {
    transition: all 0.6s ease;
 }
 
-.img { 
-   width: 100%; /* сжатие размера каждого фото отностительно рамки*/
-   height: 100%; /* сжатие размера каждого фото отностительно рамки*/
+.img {
+   width: 100%;
+   height: 100%;
 }
 
 #r1:checked ~ .s1 {
@@ -160,7 +154,8 @@ input[name="r"] {
 }
 
 #r4:checked ~ .s1 {
-   margin-left: -75%; 
+   margin-left: -75%;
+   
 
 }
 
