--- a/1.css
+++ b/1.css
@@ -151,6 +151,7 @@ margin-top: 0px;
   padding-top: 10px;
   padding-bottom: 5px;
   margin-right: 5px; 
+  margin-left: 5px;	
   height: 40px;
 }
 
