--- a/1.css
+++ b/1.css
@@ -284,7 +284,7 @@ article {
     flex: 1 400px;
 	/*border: solid 3px;*/
 	margin: 20px;
-	/*border: solid #2B3140 1px;/* рамка для проверки */ 
+	border: solid #2B3140 1px;/* рамка для проверки */ 
 }
 
 .markers li::marker {
