--- a/1.css
+++ b/1.css
@@ -66,6 +66,7 @@ p {
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .zag {
@@ -74,6 +75,9 @@ p {
   
   height: 30px;
   margin-bottom: 20px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .footer {
@@ -151,8 +155,6 @@ margin-top: 0px;
   padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 5px;
-  margin-right: 5px; 
-  margin-left: 1px;	
   height: 40px;
 }
 
@@ -164,8 +166,6 @@ padding-left: 10px;
 padding-top: 10px;
 padding-right: 10px;
 padding-bottom: 5px;
-margin-right: 5px; 
-margin-left: 1px; 
 height: 40px;
 }
 
