--- a/1.css
+++ b/1.css
@@ -207,6 +207,13 @@ height: 40px;
    width: 100%; /* сжатие размера каждого фото отностительно рамки*/
    height: 100%; /* сжатие размера каждого фото отностительно рамки*/
 }
+
+.responsive {
+  width: 100%;
+  max-width: 320px;
+  height: auto;
+}
+
 /* Адаптивные фото
 img {
   max-width: 100%;
